--- a/web_project_3-main/index.html
+++ b/web_project_3-main/index.html
@@ -54,7 +54,7 @@
         </p>
       </section>
 
-      <section class="photo-grid section">
+      <div class="photo-grid section">
         <ul class="photo-grid__list">
           <li class="photo-grid__list-item">
             <img
@@ -113,7 +113,7 @@
             />
           </li>
         </ul>
-      </section>
+      </div>
 
       <div class="places">
         <article class="places__item">
@@ -264,9 +264,10 @@
           </div>
           <img
             class="places__image"
-            src="./images/table mountain .png"
+            src="./images/table-mountain-.png-20-15-18-744.jpg"
             alt="Cape Town"
           />
+
           <div class="places__descriptions">
             <p class="places__description">
               Cape Town, city and seaport, legislative capital of South Africa
@@ -299,7 +300,7 @@
       </section>
     </main>
     <footer class="footer">
-      <p class="footer__copyright">© 2021. Samee</p>
+      <p class="footer__copyright">© 2022. Samee</p>
     </footer>
   </body>
 </html>
