--- a/web_project_3-main/index.html
+++ b/web_project_3-main/index.html
@@ -41,7 +41,7 @@
           in transforming and reshaping the conditions, thinking, and structures
           that shape and inform our lives.
         </p>
-        <p class="inroduction__author">— Joseph Beuys</p>
+        <p class="introduction__author">— Joseph Beuys</p>
         <p class="introduction__content">
           The town of Practicum has brought together professionals from
           different corners of the world. Today, Practicum Art Gallery is proud
