--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
     <main class="content">
       <section class="lead">
-        <h2 class="lead__title">From Homeland to Homeland</h2>
-        <h3 class="lead__subtitle">
+        <h1 class="lead__title">From Homeland to Homeland</h1>
+        <p class="lead__subtitle">
           An epic journey from Kentucky to Burundi through Wales and Ukraine
-        </h3>
+        </p>
         <img
           src="./images/kalegin-michail-179870-unsplash.jpg"
           alt="Seaside"
@@ -41,7 +41,7 @@
           in transforming and reshaping the conditions, thinking, and structures
           that shape and inform our lives.
         </p>
-        <p class="inroduction__author">— Joseph Beuys</p>
+        <p class="introduction__author">— Joseph Beuys</p>
         <p class="introduction__content">
           The town of Practicum has brought together professionals from
           different corners of the world. Today, Practicum Art Gallery is proud
@@ -115,7 +115,7 @@
         </ul>
       </section>
 
-      <div class="places">
+      <section class="places">
         <article class="places__item">
           <h2 class="places__title">Kyiv, Ukraine</h2>
           <div class="places__artist">
@@ -155,8 +155,10 @@
           <h2 class="places__title">Cricieth, Wales</h2>
           <div class="places__artist">
             <p class="places__artist-tag">Artist</p>
-            <p class="places__artist">Steffan Warren, lead editor</p>
-            <p class="places__artist">Kseniya Glagoleva, project manager</p>
+            <p class="places__artist-artist">Steffan Warren, lead editor</p>
+            <p class="places__artist-artist">
+              Kseniya Glagoleva, project manager
+            </p>
           </div>
           <img class="places__image" src="./images/WALES.jpg" alt="Wales" />
           <div class="places__descriptions">
@@ -188,7 +190,9 @@
           <h2 class="places__title">Berea, USA</h2>
           <div class="places__artist">
             <p class="places__artist-tag">Artist</p>
-            <p class="places__artist">Travis Turner, author and editor</p>
+            <p class="places__artist-artist">
+              Travis Turner, author and editor
+            </p>
           </div>
           <img class="places__image" src=".//images/USA.jpg" alt="USA" />
           <div class="places__descriptions">
@@ -220,7 +224,7 @@
           <h2 class="places__title">Muramvya, Burundi</h2>
           <div class="places__artist">
             <p class="places__artist-tag">Artist</p>
-            <p class="places__artist">Grevisse Kenguruka, tech editor</p>
+            <p class="places__artist-artist">Grevisse Kenguruka, tech editor</p>
           </div>
 
           <img class="places__image" src="./images/BURUNDI.jpg" alt="Burundi" />
@@ -260,13 +264,14 @@
           <h2 class="places__title">Cape Town, South Africa</h2>
           <div class="places__artist">
             <p class="places__artist-tag">Artist</p>
-            <p class="places__artist">Samee Allie, Practicum Student</p>
+            <p class="places__artist-artist">Samee Allie, Practicum Student</p>
           </div>
           <img
             class="places__image"
-            src="./images/table mountain .png"
+            src="./images/table-mountain-.png-20-15-18-744.jpg"
             alt="Cape Town"
           />
+
           <div class="places__descriptions">
             <p class="places__description">
               Cape Town, city and seaport, legislative capital of South Africa
@@ -284,7 +289,7 @@
             >Buy this artwork as NFT
           </a>
         </article>
-      </div>
+      </section>
 
       <section class="cover">
         <h2 class="cover__title">Visit us</h2>
@@ -299,7 +304,7 @@
       </section>
     </main>
     <footer class="footer">
-      <p class="footer__copyright">© 2021. Samee</p>
+      <p class="footer__copyright">© 2022. Samee</p>
     </footer>
   </body>
 </html>
