--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="page__content">
       <header class="header">
         <img
-          src="./images/logo.png"
+          src="./images/logo.jpg"
           alt="Practicum Logo"
           class="header__logo"
         />
