--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="page__content">
       <header class="header">
         <img 
-        src="./images/B1.jpg" 
+        src="./images/prlogo.svg" 
         alt="Practicum Logo"
         class="header__logo"
         />
